# Rustyvault-tui

./: .gitignore  Cargo.toml  README.md
migrations/2025-06-09-045920_create_tables/: down.sql  up.sql
src/: app.rs  main.rs  tui.rs
src/app/keyevents/: key_add.rs  key_confirm.rs  key_filter.rs  key_login.rs  key_main.rs  key_show.rs  key_update.rs  mod.rs
src/app/showtable/: mod.rs  row_change.rs
src/database/: add.rs  delete.rs  mod.rs  model.rs  retrive.rs  schema.rs  update.rs
src/security/: generator.rs  hashing.rs  mod.rs  xchacha.rs
src/tui/: add_tui.rs  confirm_tui.rs  filter_tui.rs  footer.rs  header.rs  login_popup.rs  main_page.rs  reset_popup.rs  show_tui.rs  signup_popup.rs  update_tui.rs
