[package]
name = "rustyvault-tui"
version = "0.1.0"
edition = "2024"
author = ["cyberhunter"]

[dependencies]
itertools = "0.14.0"
ratatui = "0.29.0"
unicode-width = "0.2.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
argon2 = "0.5.3"
rand = "0.8"
base64 = "0.21"
chacha20poly1305 = "0.10.1"
arboard = "3.5.0"